--- a/Tranzact.Application/appsettings.Development.json
+++ b/Tranzact.Application/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "connectionStrings": {
+    "defaultConnection": "Data Source=localhost;Initial Catalog=EFCore.App;Integrated Security=SSPI;"
   }
 }
