--- a/Tranzact.Domain.Test/Tranzact.Domain.Test.csproj
+++ b/Tranzact.Domain.Test/Tranzact.Domain.Test.csproj
@@ -8,10 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Tranzact.Domain\Tranzact.Domain.csproj" />
+    <ProjectReference Include="..\Tranzact.Infrastructure\Tranzact.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
