--- a/Tranzact.Infrastructure/Tranzact.Infrastructure.csproj
+++ b/Tranzact.Infrastructure/Tranzact.Infrastructure.csproj
@@ -7,7 +7,17 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Tranzact.Infrastructure.Models\Tranzact.Infrastructure.Models.csproj" />
+    <ProjectReference Include="..\Tranzact.Transversal\Tranzact.Transversal.csproj" />
   </ItemGroup>
 
 </Project>
